# SAS

./: .gitignore  MIGRATION_NOTES.md  README_sas2py.md  TESTING.md  pyproject.toml  pytest.ini
.github/workflows/: parity.yml  pr-review.yml  test.yml
airflow_migration/scripts/: demographics_summary.py
docs/: performance_tuning.md  sas_data_contracts.yaml  sas_dependency_graph.yaml  sas_flow_classification.yaml  sas_to_python_intake.yaml  validation_summary.md
programs/example_simple/: README.md  demographics_summary.sas
scripts/: compare_datasets.py  phuse_boxplot.py
src/sas2py/: __init__.py  config.py
src/sas2py/compare/: __init__.py  cli.py  macros.py
src/sas2py/core/: __init__.py  readers.py
src/sas2py/phuse/: __init__.py  boxplot.py  cli.py  utils.py
src/sas2py/utils/: __init__.py  test_helpers.py
tests/: __init__.py
tests/parity/: __init__.py  generate_fixtures.py  test_boxplot.py  test_comparison_macros.py  test_dataset_readers.py
tests/parity/fixtures/: adlbc_sample.csv  adlbc_sample.parquet  adsl_mod_sample.parquet  adsl_sample.csv
